instance1/temp-retrieve/objects/Add_Deduct_Inventory_Product__c/Add_Deduct_Inventory_Product__c.object-meta.xml
<CustomObject>
    <label>Add - Deduct Inventory Product</label>
    <nameField>
        <displayFormat>AIP{0000000000}</displayFormat>
        <label>Inventory Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Add - Deduct Inventory Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>