instance1/temp-retrieve/objects/Add_Deduct_Inventory_Product__c/fields/Deduction_Note__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Note__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deduction Note</label>
    <type>TextArea</type>
</CustomField>