instance1/temp-retrieve/objects/Add_Deduct_Inventory_Product__c/fields/Deduction_Type__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Type__c</fullName>
    <label>Deduction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>