instance1/temp-retrieve/objects/Add_Deduct_Inventory_Product__c/fields/Inventory_Name__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Name__c</fullName>
    <label>Inventory Name</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Add - Deduct Inventory Products</relationshipLabel>
    <relationshipName>Add_Inventory_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>