instance1/temp-retrieve/objects/Add_Deduct_Inventory_Product__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Predictive Biotech</fullName>
            </value>
            <value>
                <fullName>Nutritional Frontier</fullName>
            </value>
            <value>
                <fullName>Medical Spa Rx</fullName>
            </value>
            <value>
                <fullName>Dr. Joel Kaplan, Inc.</fullName>
            </value>
            <value>
                <fullName>Moore Medical</fullName>
            </value>
            <value>
                <fullName>Nutrafol</fullName>
            </value>
            <value>
                <fullName>Phallosan</fullName>
            </value>
            <value>
                <fullName>Eclipse Aesthetics</fullName>
            </value>
            <value>
                <fullName>Terumo BCT</fullName>
            </value>
            <value>
                <fullName>PRP Science</fullName>
            </value>
            <value>
                <fullName>Uberlube</fullName>
            </value>
            <value>
                <fullName>Hallandale Pharmacy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>AmnioWell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>